--- a/almurad-system/order-details.html
+++ b/almurad-system/order-details.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>تفاصيل الطلب - نظام المراد</title>
   <style>
     .add-small-btn {
@@ -230,6 +230,31 @@
       font-size: 20px;
       text-align: left;
     }
+    /* ✅ منع التقريب التلقائي في الموبايل + ضبط العرض الكامل */
+@media (max-width: 768px) {
+  html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    touch-action: manipulation;
+  }
+  input, select, textarea, button {
+    font-size: 16px !important;
+  }
+}
+
+/* ✅ جعل الصفحة تغطي الشاشة بالكامل في كل الأجهزة */
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  background: var(--background-gray);
+}
+
   </style>
 </head>
 
@@ -290,11 +315,10 @@
   <div class="row">
     <div class="field small">
       <label>السعر:</label>
-      <input id="price" type="number">
-    </div>
+<input id="price" type="text" inputmode="numeric">    </div>
     <div class="field small">
       <label>عدد القطع:</label>
-      <input id="quantity" type="number">
+<input id="quantity" type="text" inputmode="numeric">
     </div>
   </div>
 </div>
@@ -673,9 +697,10 @@ function addExtraProduct(product = { id: Date.now() + Math.random(), name: "", p
 
     // 🔹 تحديث المجموع
    function updateTotals() {
-  // 🔹 بيانات المنتج الأساسي
-  const mainQty = parseFloat(document.getElementById("quantity").value) || 0;
-  const mainPrice = parseFloat(document.getElementById("price").value) || 0;
+    // 🧮 نحذف الفواصل قبل التحويل حتى الحسابات تكون صحيحة
+const mainQty = parseFloat(document.getElementById("quantity").value.replace(/,/g, "")) || 0;
+const mainPrice = parseFloat(document.getElementById("price").value.replace(/,/g, "")) || 0;
+
   const mainTotal = mainQty * mainPrice;
 
   // 🔹 مجموع المنتجات الإضافية
@@ -895,6 +920,23 @@ if (lastStatus) {
 
   document.addEventListener("DOMContentLoaded", async () => {
   await loadOrder();
+});
+// ✅ تنسيق السعر والعدد بفاصلة أثناء الكتابة
+["price", "quantity"].forEach(id => {
+  const input = document.getElementById(id);
+  if (!input) return;
+
+  input.addEventListener("input", e => {
+    let val = e.target.value.replace(/[^\d]/g, ""); // نزيل أي شيء مو رقم
+    if (val) {
+      e.target.value = new Intl.NumberFormat("en-US").format(val); // نضيف الفاصلة
+    }
+  });
+
+  input.addEventListener("change", e => {
+    // نحذف الفواصل قبل الحفظ في قاعدة البيانات
+    e.target.value = e.target.value.replace(/,/g, "");
+  });
 });
 
     // 🟦 عرض أسماء المنتجات كفقاعات داخل حقل "اسم المنتج"
@@ -1117,4 +1159,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
   </script>
 </body>
-</html>
+</html> 
