--- a/almurad-system/add-order.html
+++ b/almurad-system/add-order.html
@@ -152,13 +152,23 @@
       transform: scale(1.03);
     }
 
-    .extra-product {
-      background: var(--background-gray);
-      border-radius: var(--border-radius);
-      padding: 15px 20px;
-      margin-top: 10px;
-      box-shadow: none;
-    }
+   /* 🔹 تمييز المنتجات الإضافية */
+.extra-product {
+  background: #e9f0f7; /* لون أفتح من الخلفية العادية */
+  border-left: 4px solid var(--accent-orange); /* خط جانبي برتقالي */
+  border-radius: 10px;
+  padding: 15px 20px;
+  margin-top: 15px;
+  position: relative;
+  transition: all 0.2s ease-in-out;
+}
+
+/* تأثير بسيط عند المرور */
+.extra-product:hover {
+  transform: scale(1.01);
+  box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+}
+
 
     .delete-btn {
       color: red;
@@ -185,12 +195,7 @@
     /* ✅ منع التقريب التلقائي وتغطية الشاشة بالكامل */
 @media (max-width: 768px) {
   html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-    touch-action: manipulation;
+    touch-action: manipulation; /* ✅ هذا فقط يبقى داخل الميديا */
   }
 
   input, select, textarea, button {
@@ -200,13 +205,15 @@
 
 /* ✅ جعل الصفحة تغطي كامل الشاشة في كل الأجهزة */
 html, body {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
   background: var(--background-gray);
+  box-sizing: border-box;
 }
+
 
   </style>
 </head>
@@ -268,7 +275,7 @@ html, body {
       <div class="row">
         <div class="field small">
           <label>السعر:</label>
-          <input id="price" type="number">
+<input id="price" type="text" inputmode="numeric" pattern="[0-9,]*">
         </div>
         <div class="field small">
           <label>عدد القطع:</label>
@@ -588,33 +595,39 @@ del.addEventListener("click", (e) => {
       renderProductTags();
     }
 
-    // 🔹 تحديث المجموع
-    function updateTotals() {
+function updateTotals() {
+  // 🔹 قراءة السعر والكمية للمنتج الرئيسي بدون أي ضرب
   const mainQty = parseFloat(document.getElementById("quantity").value) || 0;
-  const mainPrice = parseFloat(document.getElementById("price").value) || 0;
-  const mainTotal = mainQty * mainPrice;
+  const mainPriceRaw = document.getElementById("price").value.replace(/,/g, "");
+  const mainPrice = parseFloat(mainPriceRaw) || 0;
 
+  // 🔹 المنتجات الإضافية تُجمع أسعارها فقط (بدون ضرب بالكمية)
   const extraQty = extraProducts.reduce((sum, p) => sum + (p.qty || 0), 0);
-  const extraTotal = extraProducts.reduce((sum, p) => sum + ((p.qty || 0) * (p.price || 0)), 0);
+  const extraTotal = extraProducts.reduce((sum, p) => sum + (p.price || 0), 0);
 
+  // ✅ السعر الكلي هو مجموع السعر الرئيسي + أسعار الإضافات
   const totalQty = mainQty + extraQty;
-  const totalPrice = mainTotal + extraTotal;
+  const totalPrice = mainPrice + extraTotal;
 
+  // 🔹 تحديث الواجهة
   const totalQtyInput = document.getElementById("totalQty");
   const totalPriceInput = document.getElementById("totalPrice");
   const totalsCard = document.getElementById("totalsCard");
 
-  // ✅ إذا ماكو منتج أو عدد أو سعر نخفيها تماماً
-  if ((mainQty === 0 && mainPrice === 0) && extraProducts.length === 0) {
+  if ((mainPrice === 0 && mainQty === 0) && extraProducts.length === 0)
+ {
     totalQtyInput.value = "";
     totalPriceInput.value = "";
     totalsCard.style.display = "none";
   } else {
     totalQtyInput.value = totalQty;
-    totalPriceInput.value = totalPrice.toFixed(0);
+    totalPriceInput.value = totalPrice.toLocaleString("en-US");
     totalsCard.style.display = "block";
   }
 }
+
+
+
 
 
     // 🔸 زر الإضافة
@@ -705,9 +718,11 @@ await loadVariantsForProduct(mainCard, val, mainProductObj);
 
       productDiv.appendChild(productDropdown);
 
-      const statusOptions = ["", "مثبت", "قيد المعالجة", "قيد التجهيز", "بانتظار البضاعة", "قيد التوصيل", "تم التسليم", "راجع", "رفض"];
-      const statusDropdown = createDropdown(statusOptions, "", () => {});
-      statusDiv.appendChild(statusDropdown);
+     // ✅ الحالات المسموح بها فقط
+const statusOptions = ["مثبت", "قيد المعالجة", "بانتظار البضاعة", "رفض"];
+const statusDropdown = createDropdown(statusOptions, "", () => {});
+statusDiv.appendChild(statusDropdown);
+
     }
 
     // 💾 حفظ الطلب
@@ -716,13 +731,21 @@ await loadVariantsForProduct(mainCard, val, mainProductObj);
 
       const mainName = document.querySelector("#product input")?.value || "";
       const mainQty = parseFloat(document.getElementById("quantity").value) || 0;
-      const mainPrice = parseFloat(document.getElementById("price").value) || 0;
+const mainPrice = parseFloat(document.getElementById("price").value.replace(/,/g, "")) || 0;
 
-      const extraQty = extraProducts.reduce((sum, p) => sum + (p.qty || 0), 0);
-      const extraTotal = extraProducts.reduce((sum, p) => sum + ((p.qty || 0) * (p.price || 0)), 0);
+// 🔹 حساب الإجماليات بدون أي ضرب بالسعر × الكمية
+const extraQty = extraProducts.reduce((sum, p) => sum + (p.qty || 0), 0);
+const extraTotal = extraProducts.reduce((sum, p) => sum + (p.price || 0), 0);
 
-      const totalQty = mainQty + extraQty;
-      const totalPrice = (mainQty * mainPrice) + extraTotal;
+const totalQty = mainQty + extraQty; // الكمية فقط تجمع
+const totalPrice = mainPrice + extraTotal; // السعر الرئيسي + أسعار الإضافات فقط
+
+
+console.log("🟢 السعر النهائي قبل الإرسال:", mainPrice, "الإجمالي:", totalPrice);
+
+
+
+
 
       const combinedNames = [mainName, ...extraProducts.map(p => p.name)].filter(Boolean).join("، ");
       // 🟢 إنشاء الملاحظات مع المتغيرات
@@ -852,13 +875,41 @@ async function updateStockImmediately(productsDetailed) {
   }
 }
 
-// ✅ عرض رسالة نجاح مؤقتة قبل الانتقال
-document.getElementById("savedMsg").style.display = "block";
-setTimeout(() => {
-  window.location.href = "orders.html";
-}, 800);
+
 
     });
+// ✅ تنسيق السعر فقط، والكمية تبقى رقم طبيعي
+document.addEventListener("DOMContentLoaded", () => {
+  const priceInput = document.getElementById("price");
+  const qtyInput = document.getElementById("quantity");
+
+  // السعر بالفواصل
+  if (priceInput) {
+    priceInput.addEventListener("input", e => {
+      let raw = e.target.value.replace(/,/g, "");
+      if (isNaN(raw)) return;
+      e.target.value = Number(raw).toLocaleString("en-US");
+    });
+  }
+
+  // الكمية بدون فواصل، تمنع الفاصلة تمامًا
+  if (qtyInput) {
+    qtyInput.addEventListener("input", e => {
+      e.target.value = e.target.value.replace(/[^0-9]/g, ""); // يقبل أرقام فقط
+    });
+  }
+
+  // حذف الفواصل من السعر قبل الحفظ
+  const saveBtn = document.getElementById("saveBtn");
+  if (saveBtn) {
+    saveBtn.addEventListener("click", () => {
+      if (priceInput) {
+        priceInput.value = priceInput.value.replace(/,/g, "");
+      }
+    });
+  }
+});
+
 
   </script>
 </body>
