--- a/almurad-system/order-details.html
+++ b/almurad-system/order-details.html
@@ -254,6 +254,34 @@ html, body {
   overflow-x: hidden;
   background: var(--background-gray);
 }
+/* ✅ تمييز واضح للمنتجات الإضافية */
+.extra-product {
+  background: #ffffff;
+  border-radius: 12px;
+  padding: 15px 20px;
+  margin-top: 12px;
+  border: 2px dashed #FF6B2D; /* برتقالي من لون النظام */
+  position: relative;
+  transition: all 0.3s ease;
+}
+
+.extra-product::before {
+  content: "منتج إضافي";
+  position: absolute;
+  top: -10px;
+  right: 12px;
+  background: #FF6B2D;
+  color: white;
+  font-size: 11px;
+  padding: 3px 8px;
+  border-radius: 6px;
+  font-weight: bold;
+}
+
+.extra-product:hover {
+  background: #fff7f3;
+  transform: scale(1.01);
+}
 
   </style>
 </head>
@@ -695,25 +723,23 @@ function addExtraProduct(product = { id: Date.now() + Math.random(), name: "", p
       document.getElementById("totalsCard").style.display = "block";
     }
 
-    // 🔹 تحديث المجموع
-   function updateTotals() {
-    // 🧮 نحذف الفواصل قبل التحويل حتى الحسابات تكون صحيحة
-const mainQty = parseFloat(document.getElementById("quantity").value.replace(/,/g, "")) || 0;
-const mainPrice = parseFloat(document.getElementById("price").value.replace(/,/g, "")) || 0;
+  function updateTotals() {
+  // 🧮 نقرأ السعر والكمية بدون ضرب
+  const mainQty = parseFloat(document.getElementById("quantity").value.replace(/,/g, "")) || 0;
+  const mainPrice = parseFloat(document.getElementById("price").value.replace(/,/g, "")) || 0;
 
-  const mainTotal = mainQty * mainPrice;
-
-  // 🔹 مجموع المنتجات الإضافية
+  // 🔹 المنتجات الإضافية تُجمع أسعارها فقط بدون ضرب
   const extraQty = extraProducts.reduce((sum, p) => sum + (p.qty || 0), 0);
-  const extraTotal = extraProducts.reduce((sum, p) => sum + ((p.qty || 0) * (p.price || 0)), 0);
+  const extraTotal = extraProducts.reduce((sum, p) => sum + (p.price || 0), 0);
 
-  // 🔹 الجمع الكلي
+  // ✅ السعر الكلي هو مجموع السعر الرئيسي + أسعار المنتجات الإضافية فقط
   const totalQty = mainQty + extraQty;
-  const totalPrice = mainTotal + extraTotal;
+  const totalPrice = mainPrice + extraTotal;
 
   document.getElementById("totalQty").value = totalQty;
-  document.getElementById("totalPrice").value = totalPrice.toFixed(0);
+  document.getElementById("totalPrice").value = totalPrice.toLocaleString("en-US");
 }
+
 
 
     // 🔸 زر الإضافة
@@ -768,11 +794,14 @@ const productDropdown = createDropdown(allProducts, data.productName || "", val 
 });
       productDiv.appendChild(productDropdown);
 
-      // الحالة
-      const statusDiv = document.getElementById("status");
-      const statusOptions = ["", "مثبت", "قيد المعالجة", "قيد التجهيز", "بانتظار البضاعة", "قيد التوصيل", "تم التسليم", "راجع", "رفض"];
-      const statusDropdown = createDropdown(statusOptions, data.status || "", val => update(ref(db, `orders/${orderId}`), { status: val }));
-      statusDiv.appendChild(statusDropdown);
+    // الحالة (إظهار فقط الحالات المطلوبة)
+const statusDiv = document.getElementById("status");
+const statusOptions = ["مثبت", "قيد المعالجة", "بانتظار البضاعة", "رفض"]; // الحالات المسموح بها فقط
+const statusDropdown = createDropdown(statusOptions, data.status || "", val => 
+  update(ref(db, `orders/${orderId}`), { status: val })
+);
+statusDiv.appendChild(statusDropdown);
+
 
       // تحميل المنتجات الإضافية القديمة (إن وجدت)
       if (data.extraProducts && Array.isArray(data.extraProducts)) {
@@ -857,13 +886,13 @@ extraProducts.forEach(p => {
 const finalNotes = notesArray.join(" | ");
 
 
-  // 🔹 حساب الإجماليات
-  const mainTotal = mainProduct.qty * mainProduct.price;
-  const extraQty = extraProducts.reduce((sum, p) => sum + (p.qty || 0), 0);
-  const extraTotal = extraProducts.reduce((sum, p) => sum + ((p.qty || 0) * (p.price || 0)), 0);
+// 🔹 حساب الإجماليات بدون أي ضرب بالسعر × الكمية
+const extraQty = extraProducts.reduce((sum, p) => sum + (p.qty || 0), 0);
+const extraTotal = extraProducts.reduce((sum, p) => sum + (p.price || 0), 0);
 
-  const totalQty = mainProduct.qty + extraQty;
-  const totalPrice = mainTotal + extraTotal;
+const totalQty = mainProduct.qty + extraQty; // العدد فقط يُجمع
+const totalPrice = mainProduct.price + extraTotal; // السعر الرئيسي + أسعار الإضافات فقط
+
 
   // 🔹 توليد اسم المنتج الموحّد (فقط الأسماء بدون عدد)
   const combinedProductNames = [];
