--- a/almurad-system/orders.html
+++ b/almurad-system/orders.html
@@ -992,21 +992,16 @@ frame.src = `order-details.html?status=${encodeURIComponent(currentStatus)}`;
           { val: order.notes, textarea: true, fn: v => update(ref(db, `orders/${order.id}`), { notes: v }) },
           { val: order.receiptNum, fn: v => update(ref(db, `orders/${order.id}`), { receiptNum: v }) },
           {
-           
-  val: order.status || "",
+   val: order.status || "",
+  // ✅ الحالات المسموح بها فقط
   dropdown: [
-    "",
     "مثبت",
     "قيد المعالجة",
-    "قيد التجهيز",
     "بانتظار البضاعة",
-    "قيد التوصيل",
-    "تم التسليم",
-    "راجع",
-    "تم استلام الراجع",
     "رفض"
   ],
-fn: async (newStatus) => {
+  fn: async (newStatus) => {
+
   console.log("🧠 تم تغيير الحالة:", newStatus);
   const userName = currentUser;
   const orderRef = ref(db, `orders/${order.id}`);
